link gaps fix

--- a/src/components/organisms/NewProfileModal/components/links/ProfileModalLinks/ProfileModalLinks.scss
+++ b/src/components/organisms/NewProfileModal/components/links/ProfileModalLinks/ProfileModalLinks.scss
@@ -1,10 +1,7 @@
 $link-gap: 0.6rem;
 
 .ProfileModalLinks {
-  &__link {
-    margin-left: $link-gap;
-    &:first-child {
-      margin-left: 0;
-    }
-  }
+  display: flex;
+  flex-flow: row wrap;
+  gap: $link-gap;
 }
